# camera_models

./: .gitignore  Cargo.toml  README.md  config.toml  cv2_undistort.py  download_datasets.py  profile.json
archive/: base.rs  projection.rs  transforms.rs
datasets/: download_datasets.py
examples/: undistort_benchmark.rs
reference/: opencv.py
reference/cpp/: build.sh  camera.yaml  undistort.cpp
reference/python/: cv2_undistort.py  opencv.py
src/: base.rs  camera.rs  distortion.rs  geometry.rs  image.rs  intersections.rs  lib.rs  projection.rs
tests/: camera.yaml
