[package]
name = "camera_models"
version = "0.1.0"
edition = "2021"
default-run = "distort_image"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
approx = { version = "0.5.1", default-features = false, features = ["std"] }
cv = "0.6.0"
image = "0.24.7"
nalgebra = { version = "0.32.3", features = ["rayon", "serde"] }
num-complex = "0.4.4"
serde = "1.0.188"
toml = "0.8.0"

