[package]
name = "camera_models"
version = "0.1.0"
edition = "2021"

[dependencies]
cv = "0.6.0"
flame = "0.2.2"
image = "0.24.7"
itertools = "0.11.0"
num-complex = "0.4.4"
num-traits = "0.2.16"
rayon = "1.8.0"
serde = "1.0.188"
toml = "0.8.0"

[dependencies.approx]
version = "0.5.1"
default-features = false
features = ["std"]

[dependencies.nalgebra]
version = "0.32.3"
features = ["rayon", "serde"]

[[bin]]
name = "undistortion-benchmark"
path = "examples/undistort_benchmark.rs"

[profile.samply]
inherits = "release"
debug = true
